New design of the message that the feed has no content.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -233,6 +233,7 @@
   "email-not-set": "Unfortunately, E-mail address for blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
   "email-set": "E-mail address set",
   "emoji": "Emoji",
+  "empty-feed": "Empty feed",
   "enable-all": "Enable all",
   "enable-oppose-reactions": "Enable \"Oppose\" reactions",
   "enable-reactions": "Enable reactions",
@@ -245,6 +246,7 @@
     "news": "Back to News",
     "timeline": "Back to Timeline"
   },
+  "feed-currently-empty": "The feed is currently empty",
   "feed-title": {
     "news": "News",
     "timeline": "Timeline"
@@ -469,6 +471,7 @@
   "no-name-known": "no name known",
   "no-name-set": "no name set",
   "no-notifications": "No notifications",
+  "no-posts-yet": "No posts yet",
   "no-requests-available": "No requests available.",
   "normal": "Normal",
   "not-accept-sheriff-governance": "Do not accept sheriff's governance",
@@ -478,7 +481,6 @@
   "no-text": "(no text)",
   "not-following-comments": "Not following comments",
   "nothing-found": "Nothing found",
-  "nothing-yet": "Nothing yet.",
   "notify-about-update": "Notify followers about the update",
   "notify-followers": "Notify followers",
   "not-matter": "Does not matter",
@@ -1046,6 +1048,7 @@
   "used-by-addon": "Used by add-on:",
   "user-asks-not-publish-complaint": "User asks not to publish the complaint",
   "user-comments-hidden": "This user's comments are hidden",
+  "user-havent-posted-anything": "User haven't posted anything yet",
   "validating-access-request": "Validating access request",
   "verify-signature": "Verify signature",
   "video": "Video",
@@ -1089,6 +1092,7 @@
   "write-comment": "Write a comment...",
   "write-down-secret-words": "<0>Write down the secret words.</0> With these words, you can, if necessary, transfer your blog to another server, keeping your name and all social connections. Copy these words and store them in a safe place. Delete them from the server so they remain only with you.",
   "write-down-words": "<0>Please write down, save to a file, or print these words and keep them in a safe place.</0><1>If you lose these words, they cannot be recovered, and you will completely lose control over your registered name.</1><2>You will need them for any operations with the name ‘{name}’.</2>",
+  "write-new-post": "Write a new post",
   "written-down-delete-words": "Written down. Delete the words from the server",
   "wrong-reset-token": "Wrong secret code",
   "year-ago": "A year ago",
@@ -1099,6 +1103,7 @@
   "you-can-copy-token": "You can now copy your new token. For security reasons, this cannot be done later.",
   "you-dont-have-any-notifications": "You do not have any notifications yet.",
   "you-friends": "You are friends",
+  "you-havent-posted-anything": "You haven't posted anything yet",
   "you-no-longer-subscribed": "You are no longer subscribed",
   "your-news": "Your news",
   "your-password": "Your password",
