--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -233,6 +233,7 @@
   "email-not-set": "Niestety, adres e-mail dla bloga <b>{location}</b> nie został ustawiony, więc automatyczne resetowanie hasła jest niemożliwe. Skontaktuj się z dostawcą Moera lub właścicielem serwera, aby znaleźć alternatywne sposoby resetowania hasła.",
   "email-set": "Adres e-mail ustawiony",
   "emoji": "Emoji",
+  "empty-feed": "Pusty kanał",
   "enable-all": "Włącz wszystko",
   "enable-oppose-reactions": "Włącz reakcje \"Przeciwny\"",
   "enable-reactions": "Włącz reakcje",
@@ -245,6 +246,7 @@
     "news": "Powrót do Aktualności",
     "timeline": "Powrót do Kroniki"
   },
+  "feed-currently-empty": "Kanał jest obecnie pusty",
   "feed-title": {
     "news": "Aktualności",
     "timeline": "Kronika"
@@ -469,6 +471,7 @@
   "no-name-known": "nieznana nazwa",
   "no-name-set": "nie ustawiono nazwy",
   "no-notifications": "Brak powiadomień",
+  "no-posts-yet": "Jeszcze brak postów",
   "no-requests-available": "Brak dostępnych żądań.",
   "normal": "Normalny",
   "not-accept-sheriff-governance": "Nie akceptuj rządów szeryfa",
@@ -478,7 +481,6 @@
   "no-text": "(brak tekstu)",
   "not-following-comments": "Nie śledzi komentarzy",
   "nothing-found": "Nic nie znaleziono",
-  "nothing-yet": "Jeszcze nic.",
   "notify-about-update": "Powiadom obserwujących o aktualizacji",
   "notify-followers": "Powiadom obserwujących",
   "not-matter": "Nie ma znaczenia",
@@ -1046,6 +1048,7 @@
   "used-by-addon": "Używane przez dodatek:",
   "user-asks-not-publish-complaint": "Użytkownik prosi o niepublikowanie niniejszej skargi",
   "user-comments-hidden": "Komentarze tego użytkownika są ukryte",
+  "user-havent-posted-anything": "Użytkownik jeszcze nic nie opublikował",
   "validating-access-request": "Weryfikacja żądania dostępu",
   "verify-signature": "Zweryfikuj podpis",
   "video": "Wideo",
@@ -1089,6 +1092,7 @@
   "write-comment": "Napisz komentarz...",
   "write-down-secret-words": "<0>Zapisz tajne słowa.</0> Dzięki tym słowom będziesz mógł, w razie potrzeby, przenieść swojego bloga na inny serwer, zachowując nazwę i wszystkie kontakty społeczne. Skopiuj te słowa i umieść je w bezpiecznym miejscu. Usuń je z serwera, aby pozostały tylko u ciebie.\n",
   "write-down-words": "<0>Proszę zapisać, zapisać w pliku lub wydrukować te słowa i przechowywać je w bezpiecznym miejscu.</0><1>Jeśli stracisz te słowa, nie można ich odzyskać i całkowicie stracisz kontrolę nad swoją zarejestrowaną nazwą.</1><2>Będziesz ich potrzebować do wszystkich operacji związanych z nazwą ‘{name}’.</2>",
+  "write-new-post": "Napisz nowy post",
   "written-down-delete-words": "Zapisano. Usuń słowa z serwera",
   "wrong-reset-token": "Nieprawidłowy kod sekretny",
   "year-ago": "Rok temu",
@@ -1099,6 +1103,7 @@
   "you-can-copy-token": "Możesz teraz skopiować swój nowy token. Ze względów bezpieczeństwa nie będzie to możliwe później.",
   "you-dont-have-any-notifications": "Nie masz jeszcze żadnych powiadomień.",
   "you-friends": "Jesteście znajomymi",
+  "you-havent-posted-anything": "Jeszcze nic nie opublikowałeś",
   "you-no-longer-subscribed": "Nie jesteś już subskrybentem",
   "your-news": "Twoje aktualności",
   "your-password": "Twoje hasło",
