--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -233,6 +233,7 @@
   "email-not-set": "К сожалению, адрес e-mail для блога <b>{location}</b> не был задан, поэтому автоматический сброс пароля невозможен. Пожалуйста, свяжитесь с вашим провайдером Moera или владельцем сервера, чтобы найти другие пути для сброса пароля.",
   "email-set": "Адрес электронной почты установлен",
   "emoji": "Эмодзи",
+  "empty-feed": "Лента пуста",
   "enable-all": "Включить все",
   "enable-oppose-reactions": "Разрешить неодобрительные реакции",
   "enable-reactions": "Разрешить реакции",
@@ -245,6 +246,7 @@
     "news": "Назад к Новостям",
     "timeline": "Назад к Хронике"
   },
+  "feed-currently-empty": "Лента пока пуста",
   "feed-title": {
     "news": "Новости",
     "timeline": "Хроника"
@@ -469,6 +471,7 @@
   "no-name-known": "неизвестное имя",
   "no-name-set": "имя не задано",
   "no-notifications": "Нет уведомлений",
+  "no-posts-yet": "Постов пока нет",
   "no-requests-available": "Нет доступных просьб.",
   "normal": "Обычный",
   "not-accept-sheriff-governance": "Не одобрил присмотр шерифа",
@@ -478,7 +481,6 @@
   "no-text": "(без текста)",
   "not-following-comments": "Не слежу за комментариями",
   "nothing-found": "Ничего не найдено",
-  "nothing-yet": "Тут пока пусто.",
   "notify-about-update": "Уведомить подписчиков об обновлении",
   "notify-followers": "Уведомить подписчиков",
   "not-matter": "Не имеет значения",
@@ -1046,6 +1048,7 @@
   "used-by-addon": "Используется дополнением:",
   "user-asks-not-publish-complaint": "Пользователь просит не публиковать эту жалобу",
   "user-comments-hidden": "Комментарии этого пользователя скрываются",
+  "user-havent-posted-anything": "Пользователь пока ничего не написал",
   "validating-access-request": "Проверка запроса на доступ",
   "verify-signature": "Проверить подпись",
   "video": "Видео",
@@ -1089,6 +1092,7 @@
   "write-comment": "Напишите комментарий...",
   "write-down-secret-words": "<0>Запишите секретные слова.</0> С помощью этих слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Скопируйте эти слова и положите в безопасное место. Удалите их с сервера, чтобы они остались только у вас.",
   "write-down-words": "<0>Пожалуйста, запишите, сохраните в файл или распечатайте эти слова и храните их в безопасном месте.</0><1>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</1><2>Они вам понадобятся для любых операций с именем ‘{name}’.</2>",
+  "write-new-post": "Написать новый пост",
   "written-down-delete-words": "Записано. Удали слова с сервера",
   "wrong-reset-token": "Неправильный секретный код",
   "year-ago": "Год назад",
@@ -1099,6 +1103,7 @@
   "you-can-copy-token": "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
   "you-dont-have-any-notifications": "У вас пока нет уведомлений.",
   "you-friends": "Вы друзья",
+  "you-havent-posted-anything": "Вы пока ничего не написали",
   "you-no-longer-subscribed": "Вы больше не подписаны",
   "your-news": "Ваши новости",
   "your-password": "Ваш пароль",
