--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -233,6 +233,7 @@
   "email-not-set": "На жаль, адреса e-mail для блогу <b>{location}</b> не була задана, тому автоматичне скидання пароля неможливе. Будь ласка, зв'яжіться з вашим провайдером Moera або власником сервера, щоб знайти інші шляхи для скидання пароля.",
   "email-set": "Адресу електронної пошти встановлено",
   "emoji": "Емодзі",
+  "empty-feed": "Стрічка порожня ",
   "enable-all": "Увімкнути все",
   "enable-oppose-reactions": "Дозволити несхвальні реакції",
   "enable-reactions": "Дозволити реакції",
@@ -245,6 +246,7 @@
     "news": "Назад до Новин",
     "timeline": "Назад до Хроніки"
   },
+  "feed-currently-empty": "Стрічка наразі порожня",
   "feed-title": {
     "news": "Новини",
     "timeline": "Хроніка"
@@ -469,6 +471,7 @@
   "no-name-known": "невідоме ім'я",
   "no-name-set": "ім'я не задано",
   "no-notifications": "Немає повідомлень",
+  "no-posts-yet": "Постів ще немає",
   "no-requests-available": "Немає доступних прохань.",
   "normal": "Звичайний",
   "not-accept-sheriff-governance": "Не схвалив нагляд шерифа",
@@ -478,7 +481,6 @@
   "no-text": "(без текста)",
   "not-following-comments": "Не слідкую за коментарями",
   "nothing-found": "Нічого не знайдено",
-  "nothing-yet": "Тут поки що порожньо.",
   "notify-about-update": "Повідомити підписникам про оновлення",
   "notify-followers": "Повідомити підписникам",
   "not-matter": "Не має значення",
@@ -1046,6 +1048,7 @@
   "used-by-addon": "Використовується додатком:",
   "user-asks-not-publish-complaint": "Користувач просить не публікувати цю скаргу",
   "user-comments-hidden": "Коментарі цього користувача приховуються",
+  "user-havent-posted-anything": "Користувач ще нічого не написав",
   "validating-access-request": "Перевірка запиту на доступ",
   "verify-signature": "Перевірити підпис",
   "video": "Відео",
@@ -1089,6 +1092,7 @@
   "write-comment": "Напишіть коментар...",
   "write-down-secret-words": "<0>Запишіть секретні слова.</0> За допомогою цих слів ви зможете, у разі необхідності, перенести свій блог на інший сервер, зберігши ім'я та всі соціальні зв'язки. Скопіюйте ці слова та покладіть у безпечне місце. Видаліть їх із сервера, щоб вони залишилися тільки у вас.",
   "write-down-words": "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте ці слова і зберігайте їх у безпечному місці.</0><1>Якщо ви втратите ці слова, їх неможливо буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</1><2>Вони вам знадобляться для будь-яких операцій з ім'ям ‘{name}’.</2>",
+  "write-new-post": "Написати новий пост",
   "written-down-delete-words": "Записано. Видали слова з сервера",
   "wrong-reset-token": "Невірний секретний код",
   "year-ago": "Рік тому",
@@ -1099,6 +1103,7 @@
   "you-can-copy-token": "Зараз ви можете скопіювати ваш новий токен. З міркувань безпеки, це не можна буде зробити пізніше.",
   "you-dont-have-any-notifications": "У вас ще немає жодних повідомлень.",
   "you-friends": "Ви друзі",
+  "you-havent-posted-anything": "Ви ще нічого не написали",
   "you-no-longer-subscribed": "Ви більше не підписані",
   "your-news": "Ваші новини",
   "your-password": "Ваш пароль",
