New design of the message that the posting is not found.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -521,7 +521,8 @@
   "post-button": "Publish",
   "post-edited-conflict": "The post was edited by somebody.",
   "posting": "Post",
-  "posting-not-found": "Post is not found or cannot be displayed.",
+  "posting-not-found": "Post is not found",
+  "posting-not-found-or-displayed": "Post is not found or cannot be displayed",
   "postings": "Posts",
   "posting-updated-at": "updated",
   "post-not-allowed": "You cannot post to this blog.",
@@ -1011,6 +1012,7 @@
   "transfer-existing-name": "Transfer an existing name",
   "transfer-existing-name-button": "Transfer an Existing Name",
   "transfer-node-name": "Transfer Name From Another Node",
+  "try-again": "Try again",
   "try-refine-search": "Try to refine your search terms or adjust filters",
   "tune-recommendations": "Tune recommendations",
   "turn-off": "Turn off",
