--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -521,7 +521,8 @@
   "post-button": "Opublikuj",
   "post-edited-conflict": "Post został edytowany przez kogoś innego.",
   "posting": "Post",
-  "posting-not-found": "Nie znaleziono posta lub nie można go wyświetlić.",
+  "posting-not-found": "Post nie znaleziony",
+  "posting-not-found-or-displayed": "Nie znaleziono posta lub nie można go wyświetlić",
   "postings": "Posty",
   "posting-updated-at": "zaktualizowany",
   "post-not-allowed": "Nie możesz publikować na tym blogu.",
@@ -1011,6 +1012,7 @@
   "transfer-existing-name": "Przenieś istniejącą nazwę",
   "transfer-existing-name-button": "Przenieś istniejącą nazwę",
   "transfer-node-name": "Przenieś nazwę z innego węzła",
+  "try-again": "Spróbuj ponownie",
   "try-refine-search": "Spróbuj zawęzić wyszukiwane hasła lub dostosować filtry",
   "tune-recommendations": "Dostosuj rekomendacje",
   "turn-off": "Wyłącz",
