--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -521,7 +521,8 @@
   "post-button": "Опубликовать",
   "post-edited-conflict": "Пост был кем-то отредактирован.",
   "posting": "Пост",
-  "posting-not-found": "Пост не найден или не может быть показан.",
+  "posting-not-found": "Пост не найден",
+  "posting-not-found-or-displayed": "Пост не найден или не может быть показан",
   "postings": "Посты",
   "posting-updated-at": "изменён",
   "post-not-allowed": "Вы не можете писать в этот блог.",
@@ -1011,6 +1012,7 @@
   "transfer-existing-name": "Переместить существующее имя",
   "transfer-existing-name-button": "Переместить существующее имя",
   "transfer-node-name": "Переместить имя с другого узла",
+  "try-again": "Попробуй еще раз",
   "try-refine-search": "Попробуйте уточнить поисковый запрос или настроить фильтры",
   "tune-recommendations": "Настроить рекомендации",
   "turn-off": "Выключить",
