--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -521,7 +521,8 @@
   "post-button": "Опублікувати",
   "post-edited-conflict": "Пост був кимось відредагований.",
   "posting": "Пост",
-  "posting-not-found": "Пост не знайдений або не може бути показаний.",
+  "posting-not-found": "Пост не знайдено",
+  "posting-not-found-or-displayed": "Пост не знайдено або не можна показати",
   "postings": "Пости",
   "posting-updated-at": "змінений",
   "post-not-allowed": "Ви не в змозі писати у цей блог.",
@@ -1011,6 +1012,7 @@
   "transfer-existing-name": "Перемістити існуюче ім'я",
   "transfer-existing-name-button": "Перемістити існуюче ім'я",
   "transfer-node-name": "Перемістити ім'я з іншого вузла",
+  "try-again": "Спробуй ще раз",
   "try-refine-search": "Спробуйте уточнити пошуковий запит або налаштувати фільтри",
   "tune-recommendations": "Налаштувати рекомендації",
   "turn-off": "Вимкнути",
