Basic design of GooglePlayProhibitedPage.

--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -475,6 +475,7 @@
   "no-requests-available": "Немає доступних прохань.",
   "normal": "Звичайний",
   "not-accept-sheriff-governance": "Не схвалив нагляд шерифа",
+  "not-accessible": "Недоступно",
   "not-allowed": "Неприпустимо",
   "not-connected-home": "Не увійшли",
   "note-complaints-public": "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
