--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -475,6 +475,7 @@
   "no-requests-available": "No requests available.",
   "normal": "Normal",
   "not-accept-sheriff-governance": "Do not accept sheriff's governance",
+  "not-accessible": "Not accessible",
   "not-allowed": "Not allowed",
   "not-connected-home": "Not logged in",
   "note-complaints-public": "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
