--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -475,6 +475,7 @@
   "no-requests-available": "Brak dostępnych żądań.",
   "normal": "Normalny",
   "not-accept-sheriff-governance": "Nie akceptuj rządów szeryfa",
+  "not-accessible": "Niedostępny",
   "not-allowed": "Nie dozwolone",
   "not-connected-home": "Nie zalogowano",
   "note-complaints-public": "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
