Connect TimelinePage and PeoplePage with tabs and make them look similar.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -544,6 +544,7 @@
   "profile": "Profile",
   "profile-edited-conflict": "Profile was edited by somebody.",
   "profile-tabs": {
+    "people": "People",
     "posts": "Posts"
   },
   "progress": "{done} of {total} done",
