--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -544,6 +544,7 @@
   "profile": "Profil",
   "profile-edited-conflict": "Profil został edytowany przez kogoś innego.",
   "profile-tabs": {
+    "people": "Ludzie",
     "posts": "Posty"
   },
   "progress": "{done} z {total} wykonane",
