--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -544,6 +544,7 @@
   "profile": "Профіль",
   "profile-edited-conflict": "Профіль був кимось відредагований.",
   "profile-tabs": {
+    "people": "Люди",
     "posts": "Пости"
   },
   "progress": "{done} з {total} зроблено",
