"Add avatar" button in ProfileSidebar/ProfileTitle. Full-screen AvatarEditDialog on mobile.

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -2,6 +2,7 @@
   "access-google-play-sheriff-granted": "Dostęp dla szeryfa Google Play został przyznany",
   "access-granted": "Dostęp przyznany",
   "access-request-not-valid": "Żądanie dostępu jest nieprawidłowe",
+  "add-avatar": "Dodaj awatar",
   "add-comments-need": "Aby dodać komentarze, musisz się <0>{signup}</0> lub <1>{connect}</1>",
   "add-connection": "Dodaj konto",
   "add-donation": "Dodaj darowiznę",
@@ -1012,7 +1013,6 @@
   "total-colon": "Całkowite",
   "transfer": "Przenieś",
   "transfer-existing-name": "Przenieś istniejącą nazwę",
-  "transfer-existing-name-button": "Przenieś istniejącą nazwę",
   "transfer-node-name": "Przenieś nazwę z innego węzła",
   "try-again": "Spróbuj ponownie",
   "try-refine-search": "Spróbuj zawęzić wyszukiwane hasła lub dostosować filtry",
