--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -2,6 +2,7 @@
   "access-google-play-sheriff-granted": "Доступ шерифу Google Play разрешён",
   "access-granted": "Доступ разрешён",
   "access-request-not-valid": "Запрос на доступ недействителен",
+  "add-avatar": "Добавить аватар",
   "add-comments-need": "Чтобы комментировать, вам нужно <0>{signup}</0> или <1>{connect}</1>",
   "add-connection": "Добавить аккаунт",
   "add-donation": "Добавить донат",
@@ -1012,7 +1013,6 @@
   "total-colon": "Всего:",
   "transfer": "Переместить",
   "transfer-existing-name": "Переместить существующее имя",
-  "transfer-existing-name-button": "Переместить существующее имя",
   "transfer-node-name": "Переместить имя с другого узла",
   "try-again": "Попробуй еще раз",
   "try-refine-search": "Попробуйте уточнить поисковый запрос или настроить фильтры",
