--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -2,6 +2,7 @@
   "access-google-play-sheriff-granted": "Доступ шерифу Google Play дозволено",
   "access-granted": "Доступ надано",
   "access-request-not-valid": "Запит на доступ недійсний",
+  "add-avatar": "Додати аватар",
   "add-comments-need": "Щоб коментувати, вам треба <0>{signup}</0> або <1>{connect}</1>",
   "add-connection": "Додати акаунт",
   "add-donation": "Додати донат",
@@ -1012,7 +1013,6 @@
   "total-colon": "Всього:",
   "transfer": "Перемістити",
   "transfer-existing-name": "Перемістити існуюче ім'я",
-  "transfer-existing-name-button": "Перемістити існуюче ім'я",
   "transfer-node-name": "Перемістити ім'я з іншого вузла",
   "try-again": "Спробуй ще раз",
   "try-refine-search": "Спробуйте уточнити пошуковий запит або налаштувати фільтри",
