--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -2,6 +2,7 @@
   "access-google-play-sheriff-granted": "Access for the Google Play sheriff is granted",
   "access-granted": "Access granted",
   "access-request-not-valid": "Access request is not valid",
+  "add-avatar": "Add avatar",
   "add-comments-need": "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
   "add-connection": "Add account",
   "add-donation": "Add Donation",
@@ -1012,7 +1013,6 @@
   "total-colon": "Total:",
   "transfer": "Transfer",
   "transfer-existing-name": "Transfer an existing name",
-  "transfer-existing-name-button": "Transfer an Existing Name",
   "transfer-node-name": "Transfer Name From Another Node",
   "try-again": "Try again",
   "try-refine-search": "Try to refine your search terms or adjust filters",
