--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -545,6 +545,7 @@
   "profile": "Профиль",
   "profile-edited-conflict": "Профиль был кем-то отредактирован.",
   "profile-tabs": {
+    "about": "О себе",
     "people": "Люди",
     "posts": "Посты"
   },
