--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -545,6 +545,7 @@
   "profile": "Профіль",
   "profile-edited-conflict": "Профіль був кимось відредагований.",
   "profile-tabs": {
+    "about": "Про себе",
     "people": "Люди",
     "posts": "Пости"
   },
