--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -689,7 +689,7 @@
   "set-as-default": "Сделать значением по умолчанию",
   "set-by-admin": "установлено администратором",
   "set-by-post-owner": "установлено автором поста",
-  "set-email-provider-contact": "Вам необходимо указать адрес электронной почты в своем профиле, чтобы провайдер мог связаться с вами при необходимости. Пожалуйста, перейдите на страницу своего профиля, нажмите кнопку \"Редактировать\" и заполните поле \"E-mail\".",
+  "set-email-provider-contact": "Вам необходимо указать адрес электронной почты в профиле, чтобы провайдер мог связаться с вами при необходимости. Пожалуйста, перейдите в Настройки > Мой профиль и заполните поле \"E-mail\".",
   "set-home-password": "Установка домашнего пароля",
   "set-password-and-connect": "Установить пароль и войти",
   "setting": {
@@ -1112,8 +1112,8 @@
   "you-no-longer-subscribed": "Вы больше не подписаны",
   "your-news": "Ваши новости",
   "your-password": "Ваш пароль",
+  "your-posts": "Ваши посты",
   "your-profile": "Ваш профиль",
-  "your-timeline": "Ваша хроника",
   "you-subscribed": "Вы подписаны",
   "zoom-in": "Увеличить",
   "zoom-out": "Уменьшить"
