--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -689,7 +689,7 @@
   "set-as-default": "Зробити значенням за замовчуванням",
   "set-by-admin": "встановлено адміністратором",
   "set-by-post-owner": "встановлено автором поста",
-  "set-email-provider-contact": "Вам необхідно вказати адресу електронної пошти у своєму профілі, щоб провайдер міг зв'язатися з вами у разі потреби. Будь ласка, перейдіть на сторінку свого профілю, натисніть кнопку \"Редагувати\" та заповніть поле \"E-mail\".",
+  "set-email-provider-contact": "Вам потрібно вказати адресу електронної пошти у профілі, щоб провайдер зміг зв'язатись з вами у разі потреби. Будь ласка, перейдіть до Налаштування > Мій профіль та заповніть поле \"E-mail\".",
   "set-home-password": "Встановлення домашнього пароля",
   "set-password-and-connect": "Встановити пароль та увійти",
   "setting": {
@@ -1112,8 +1112,8 @@
   "you-no-longer-subscribed": "Ви більше не підписані",
   "your-news": "Ваші новини",
   "your-password": "Ваш пароль",
+  "your-posts": "Ваші пости",
   "your-profile": "Ваш профіль",
-  "your-timeline": "Ваша хроніка",
   "you-subscribed": "Ви підписані",
   "zoom-in": "Збільшити",
   "zoom-out": "Зменьшити"
