--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -689,7 +689,7 @@
   "set-as-default": "Set as default",
   "set-by-admin": "set by admin",
   "set-by-post-owner": "set by post author",
-  "set-email-provider-contact": "You need to set an E-mail address in your profile, so the provider will be able to contact you if needed. Please, go to your Profile page, press Edit and fill the E-mail field.",
+  "set-email-provider-contact": "You need to set an E-mail address in your profile, so the provider will be able to contact you if needed. Please, go to Settings > My Profile and fill the E-mail field.",
   "set-home-password": "Set Home Password",
   "set-password-and-connect": "Set Password & Log In",
   "setting": {
@@ -1112,8 +1112,8 @@
   "you-no-longer-subscribed": "You are no longer subscribed",
   "your-news": "Your news",
   "your-password": "Your password",
+  "your-posts": "Your posts",
   "your-profile": "Your profile",
-  "your-timeline": "Your timeline",
   "you-subscribed": "You are subscribed",
   "zoom-in": "Zoom in",
   "zoom-out": "Zoom out"
