Cancelling button in PeopleSearch.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -75,6 +75,7 @@
   "change-password": "Change password",
   "choose-decision": "Please, choose your decision...",
   "choose-request": "Choose a request...",
+  "clear": "Clear",
   "clear-filters": "Clear filters",
   "clear-formatting": "Clear formatting",
   "clear-selection": "Clear selection",
