--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -75,6 +75,7 @@
   "change-password": "Zmień hasło",
   "choose-decision": "Proszę wybrać swoją decyzję...",
   "choose-request": "Wybierz żądanie...",
+  "clear": "Wyczyść",
   "clear-filters": "Wyczyść filtry",
   "clear-formatting": "Wyczyść formatowanie",
   "clear-selection": "Wyczyść wybór",
