--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -75,6 +75,7 @@
   "change-password": "Изменить пароль",
   "choose-decision": "Пожалуйста, выберите свой вариант...",
   "choose-request": "Выберите просьбу...",
+  "clear": "Очистить",
   "clear-filters": "Очистить фильтры",
   "clear-formatting": "Убрать форматирование",
   "clear-selection": "Отменить выбор",
