--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -75,6 +75,7 @@
   "change-password": "Змінити пароль",
   "choose-decision": "Будь ласка, оберіть рішення...",
   "choose-request": "Виберіть прохання...",
+  "clear": "Очистити",
   "clear-filters": "Очистити фільтри",
   "clear-formatting": "Прибрати форматування",
   "clear-selection": "Відмінити вибір",
