Showing the list of the most active nodes on Explore page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -240,6 +240,8 @@
   "expand": "Expand ↓",
   "expires": "Expires:",
   "explore": "Explore",
+  "explore-people": "Explore people",
+  "explore-posts": "Explore posts",
   "failure-reason": "Failure reason",
   "feed-currently-empty": "The feed is currently empty",
   "feed-title": {
