--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -240,6 +240,8 @@
   "expand": "Rozwiń ↓",
   "expires": "Wygasa:",
   "explore": "Przegląd",
+  "explore-people": "Przegląd ludzi",
+  "explore-posts": "Przegląd postów",
   "failure-reason": "Powód niepowodzenia",
   "feed-currently-empty": "Kanał jest obecnie pusty",
   "feed-title": {
