--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -240,6 +240,8 @@
   "expand": "Развернуть ↓",
   "expires": "Годен до:",
   "explore": "Обзор",
+  "explore-people": "Обзор людей",
+  "explore-posts": "Обзор постов",
   "failure-reason": "Причина неудачи",
   "feed-currently-empty": "Лента пока пуста",
   "feed-title": {
