--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -240,6 +240,8 @@
   "expand": "Розгорнути ↓",
   "expires": "Придатний до:",
   "explore": "Огляд",
+  "explore-people": "Огляд людей",
+  "explore-posts": "Огляд постів",
   "failure-reason": "Причина невдачі",
   "feed-currently-empty": "Стрічка наразі порожня",
   "feed-title": {
