'Privacy' is a better name than 'Hide'.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -539,6 +539,7 @@
     "signed": "Logged in",
     "subscribed": "Subscriptions"
   },
+  "privacy": "Privacy",
   "profile": "Profile",
   "profile-edited-conflict": "Profile was edited by somebody.",
   "profile-tabs": {
