--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -539,6 +539,7 @@
     "signed": "Zalogowany",
     "subscribed": "Subskrypcje"
   },
+  "privacy": "Prywatność",
   "profile": "Profil",
   "profile-edited-conflict": "Profil został edytowany przez kogoś innego.",
   "profile-tabs": {
