--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -539,6 +539,7 @@
     "signed": "Зарегистрированным",
     "subscribed": "Подписки"
   },
+  "privacy": "Конфиденциальность",
   "profile": "Профиль",
   "profile-edited-conflict": "Профиль был кем-то отредактирован.",
   "profile-tabs": {
