--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -539,6 +539,7 @@
     "signed": "Зареєстрованим",
     "subscribed": "Підписки"
   },
+  "privacy": "Конфіденційність",
   "profile": "Профіль",
   "profile-edited-conflict": "Профіль був кимось відредагований.",
   "profile-tabs": {
