--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -1009,6 +1009,7 @@
   "token-usage-warning": "Prosimy pamiętać, że token daje dostęp do bloga. Nigdy nie udostępniaj go osobom, którym nie ufasz!",
   "too-long": "Zbyt długi",
   "top": "Góra",
+  "total": "Całkowity",
   "total-colon": "Całkowite",
   "transfer": "Przenieś",
   "transfer-existing-name": "Przenieś istniejącą nazwę",
