--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -1009,6 +1009,7 @@
   "token-usage-warning": "Имейте в виду, что токен даёт доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
   "too-long": "Слишком длинно",
   "top": "В конец",
+  "total": "Всего",
   "total-colon": "Всего:",
   "transfer": "Переместить",
   "transfer-existing-name": "Переместить существующее имя",
