--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -1009,6 +1009,7 @@
   "token-usage-warning": "Майте на увазі, що токен дає доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
   "too-long": "Занадто довго",
   "top": "У кінець",
+  "total": "Усього",
   "total-colon": "Всього:",
   "transfer": "Перемістити",
   "transfer-existing-name": "Перемістити існуюче ім'я",
